Codes/parser & lexer/Ast_builder/_build/parser.automaton
State 0:
## Known stack suffix:
##
## LR(1) items:
start' -> . start [ # ]
## Transitions:
-- On IDENTIFIER shift to state 1
-- On tla_file shift to state 111
-- On start shift to state 115
-- On definition shift to state 114
## Reductions:

State 1:
## Known stack suffix:
## IDENTIFIER
## LR(1) items:
definition -> IDENTIFIER . ASSIGN temporal_formula SEMICOLON [ IDENTIFIER EOF ]
definition -> IDENTIFIER . LPAR varlist RPAR ASSIGN temporal_formula SEMICOLON [ IDENTIFIER EOF ]
definition -> IDENTIFIER . SLPAR varlist SRPAR ASSIGN temporal_formula SEMICOLON [ IDENTIFIER EOF ]
definition -> IDENTIFIER . ASSIGN expr SEMICOLON [ IDENTIFIER EOF ]
definition -> IDENTIFIER . LPAR varlist RPAR ASSIGN expr SEMICOLON [ IDENTIFIER EOF ]
definition -> IDENTIFIER . SLPAR varlist SRPAR ASSIGN expr SEMICOLON [ IDENTIFIER EOF ]
## Transitions:
-- On SLPAR shift to state 2
-- On LPAR shift to state 98
-- On ASSIGN shift to state 106
## Reductions:

State 2:
## Known stack suffix:
## IDENTIFIER SLPAR
## LR(1) items:
definition -> IDENTIFIER SLPAR . varlist SRPAR ASSIGN temporal_formula SEMICOLON [ IDENTIFIER EOF ]
definition -> IDENTIFIER SLPAR . varlist SRPAR ASSIGN expr SEMICOLON [ IDENTIFIER EOF ]
## Transitions:
-- On IDENTIFIER shift to state 3
-- On varlist shift to state 6
## Reductions:
-- On SRPAR
--   reduce production varlist ->

State 3:
## Known stack suffix:
## IDENTIFIER
## LR(1) items:
varlist -> IDENTIFIER . [ SRPAR RPAR ]
varlist -> IDENTIFIER . COMMA varlist [ SRPAR RPAR ]
## Transitions:
-- On COMMA shift to state 4
## Reductions:
-- On SRPAR RPAR
--   reduce production varlist -> IDENTIFIER

State 4:
## Known stack suffix:
## IDENTIFIER COMMA
## LR(1) items:
varlist -> IDENTIFIER COMMA . varlist [ SRPAR RPAR ]
## Transitions:
-- On IDENTIFIER shift to state 3
-- On varlist shift to state 5
## Reductions:
-- On SRPAR RPAR
--   reduce production varlist ->

State 5:
## Known stack suffix:
## IDENTIFIER COMMA varlist
## LR(1) items:
varlist -> IDENTIFIER COMMA varlist . [ SRPAR RPAR ]
## Transitions:
## Reductions:
-- On SRPAR RPAR
--   reduce production varlist -> IDENTIFIER COMMA varlist

State 6:
## Known stack suffix:
## IDENTIFIER SLPAR varlist
## LR(1) items:
definition -> IDENTIFIER SLPAR varlist . SRPAR ASSIGN temporal_formula SEMICOLON [ IDENTIFIER EOF ]
definition -> IDENTIFIER SLPAR varlist . SRPAR ASSIGN expr SEMICOLON [ IDENTIFIER EOF ]
## Transitions:
-- On SRPAR shift to state 7
## Reductions:

State 7:
## Known stack suffix:
## IDENTIFIER SLPAR varlist SRPAR
## LR(1) items:
definition -> IDENTIFIER SLPAR varlist SRPAR . ASSIGN temporal_formula SEMICOLON [ IDENTIFIER EOF ]
definition -> IDENTIFIER SLPAR varlist SRPAR . ASSIGN expr SEMICOLON [ IDENTIFIER EOF ]
## Transitions:
-- On ASSIGN shift to state 8
## Reductions:

State 8:
## Known stack suffix:
## IDENTIFIER SLPAR varlist SRPAR ASSIGN
## LR(1) items:
definition -> IDENTIFIER SLPAR varlist SRPAR ASSIGN . temporal_formula SEMICOLON [ IDENTIFIER EOF ]
definition -> IDENTIFIER SLPAR varlist SRPAR ASSIGN . expr SEMICOLON [ IDENTIFIER EOF ]
## Transitions:
-- On SLPAR shift to state 9
-- On Num shift to state 14
-- On LPAR shift to state 15
-- On IDENTIFIER shift to state 37
-- On FORALL shift to state 53
-- On EXISTS shift to state 65
-- On term shift to state 23
-- On temporal_formula shift to state 88
-- On proposition shift to state 70
-- On primed_eq shift to state 94
-- On predicate shift to state 95
-- On factor shift to state 28
-- On expr shift to state 96
## Reductions:

State 9:
## Known stack suffix:
## SLPAR
## LR(1) items:
factor -> SLPAR . IDENTIFIER IN IDENTIFIER ARROW expr SRPAR [ Smaller STAR SRPAR SLASH SEMICOLON RPAR PLUS OR MINUS Larger EQUAL AND ]
## Transitions:
-- On IDENTIFIER shift to state 10
## Reductions:

State 10:
## Known stack suffix:
## SLPAR IDENTIFIER
## LR(1) items:
factor -> SLPAR IDENTIFIER . IN IDENTIFIER ARROW expr SRPAR [ Smaller STAR SRPAR SLASH SEMICOLON RPAR PLUS OR MINUS Larger EQUAL AND ]
## Transitions:
-- On IN shift to state 11
## Reductions:

State 11:
## Known stack suffix:
## SLPAR IDENTIFIER IN
## LR(1) items:
factor -> SLPAR IDENTIFIER IN . IDENTIFIER ARROW expr SRPAR [ Smaller STAR SRPAR SLASH SEMICOLON RPAR PLUS OR MINUS Larger EQUAL AND ]
## Transitions:
-- On IDENTIFIER shift to state 12
## Reductions:

State 12:
## Known stack suffix:
## SLPAR IDENTIFIER IN IDENTIFIER
## LR(1) items:
factor -> SLPAR IDENTIFIER IN IDENTIFIER . ARROW expr SRPAR [ Smaller STAR SRPAR SLASH SEMICOLON RPAR PLUS OR MINUS Larger EQUAL AND ]
## Transitions:
-- On ARROW shift to state 13
## Reductions:

State 13:
## Known stack suffix:
## SLPAR IDENTIFIER IN IDENTIFIER ARROW
## LR(1) items:
factor -> SLPAR IDENTIFIER IN IDENTIFIER ARROW . expr SRPAR [ Smaller STAR SRPAR SLASH SEMICOLON RPAR PLUS OR MINUS Larger EQUAL AND ]
## Transitions:
-- On SLPAR shift to state 9
-- On Num shift to state 14
-- On LPAR shift to state 15
-- On IDENTIFIER shift to state 16
-- On term shift to state 23
-- On factor shift to state 28
-- On expr shift to state 35
## Reductions:

State 14:
## Known stack suffix:
## Num
## LR(1) items:
factor -> Num . [ Smaller STAR SRPAR SLASH SEMICOLON RPAR PLUS OR MINUS Larger EQUAL AND ]
## Transitions:
## Reductions:
-- On Smaller STAR SRPAR SLASH SEMICOLON RPAR PLUS OR MINUS Larger EQUAL AND
--   reduce production factor -> Num

State 15:
## Known stack suffix:
## LPAR
## LR(1) items:
factor -> LPAR . expr RPAR [ Smaller STAR SRPAR SLASH SEMICOLON RPAR PLUS OR MINUS Larger EQUAL AND ]
## Transitions:
-- On SLPAR shift to state 9
-- On Num shift to state 14
-- On LPAR shift to state 15
-- On IDENTIFIER shift to state 16
-- On term shift to state 23
-- On factor shift to state 28
-- On expr shift to state 29
## Reductions:

State 16:
## Known stack suffix:
## IDENTIFIER
## LR(1) items:
factor -> IDENTIFIER . [ Smaller STAR SRPAR SLASH SEMICOLON RPAR PLUS OR MINUS Larger EQUAL AND ]
factor -> IDENTIFIER . LPAR varlist RPAR [ Smaller STAR SRPAR SLASH SEMICOLON RPAR PLUS OR MINUS Larger EQUAL AND ]
factor -> IDENTIFIER . SLPAR varlist SRPAR [ Smaller STAR SRPAR SLASH SEMICOLON RPAR PLUS OR MINUS Larger EQUAL AND ]
## Transitions:
-- On SLPAR shift to state 17
-- On LPAR shift to state 20
## Reductions:
-- On Smaller STAR SRPAR SLASH SEMICOLON RPAR PLUS OR MINUS Larger EQUAL AND
--   reduce production factor -> IDENTIFIER

State 17:
## Known stack suffix:
## IDENTIFIER SLPAR
## LR(1) items:
factor -> IDENTIFIER SLPAR . varlist SRPAR [ Smaller STAR SRPAR SLASH SEMICOLON RPAR PLUS OR MINUS Larger EQUAL AND ]
## Transitions:
-- On IDENTIFIER shift to state 3
-- On varlist shift to state 18
## Reductions:
-- On SRPAR
--   reduce production varlist ->

State 18:
## Known stack suffix:
## IDENTIFIER SLPAR varlist
## LR(1) items:
factor -> IDENTIFIER SLPAR varlist . SRPAR [ Smaller STAR SRPAR SLASH SEMICOLON RPAR PLUS OR MINUS Larger EQUAL AND ]
## Transitions:
-- On SRPAR shift to state 19
## Reductions:

State 19:
## Known stack suffix:
## IDENTIFIER SLPAR varlist SRPAR
## LR(1) items:
factor -> IDENTIFIER SLPAR varlist SRPAR . [ Smaller STAR SRPAR SLASH SEMICOLON RPAR PLUS OR MINUS Larger EQUAL AND ]
## Transitions:
## Reductions:
-- On Smaller STAR SRPAR SLASH SEMICOLON RPAR PLUS OR MINUS Larger EQUAL AND
--   reduce production factor -> IDENTIFIER SLPAR varlist SRPAR

State 20:
## Known stack suffix:
## IDENTIFIER LPAR
## LR(1) items:
factor -> IDENTIFIER LPAR . varlist RPAR [ Smaller STAR SRPAR SLASH SEMICOLON RPAR PLUS OR MINUS Larger EQUAL AND ]
## Transitions:
-- On IDENTIFIER shift to state 3
-- On varlist shift to state 21
## Reductions:
-- On RPAR
--   reduce production varlist ->

State 21:
## Known stack suffix:
## IDENTIFIER LPAR varlist
## LR(1) items:
factor -> IDENTIFIER LPAR varlist . RPAR [ Smaller STAR SRPAR SLASH SEMICOLON RPAR PLUS OR MINUS Larger EQUAL AND ]
## Transitions:
-- On RPAR shift to state 22
## Reductions:

State 22:
## Known stack suffix:
## IDENTIFIER LPAR varlist RPAR
## LR(1) items:
factor -> IDENTIFIER LPAR varlist RPAR . [ Smaller STAR SRPAR SLASH SEMICOLON RPAR PLUS OR MINUS Larger EQUAL AND ]
## Transitions:
## Reductions:
-- On Smaller STAR SRPAR SLASH SEMICOLON RPAR PLUS OR MINUS Larger EQUAL AND
--   reduce production factor -> IDENTIFIER LPAR varlist RPAR

State 23:
## Known stack suffix:
## term
## LR(1) items:
expr -> term . [ Smaller SRPAR SEMICOLON RPAR PLUS OR MINUS Larger EQUAL AND ]
term -> term . STAR factor [ Smaller STAR SRPAR SLASH SEMICOLON RPAR PLUS OR MINUS Larger EQUAL AND ]
term -> term . SLASH factor [ Smaller STAR SRPAR SLASH SEMICOLON RPAR PLUS OR MINUS Larger EQUAL AND ]
## Transitions:
-- On STAR shift to state 24
-- On SLASH shift to state 26
## Reductions:
-- On Smaller SRPAR SEMICOLON RPAR PLUS OR MINUS Larger EQUAL AND
--   reduce production expr -> term

State 24:
## Known stack suffix:
## term STAR
## LR(1) items:
term -> term STAR . factor [ Smaller STAR SRPAR SLASH SEMICOLON RPAR PLUS OR MINUS Larger EQUAL AND ]
## Transitions:
-- On SLPAR shift to state 9
-- On Num shift to state 14
-- On LPAR shift to state 15
-- On IDENTIFIER shift to state 16
-- On factor shift to state 25
## Reductions:

State 25:
## Known stack suffix:
## term STAR factor
## LR(1) items:
term -> term STAR factor . [ Smaller STAR SRPAR SLASH SEMICOLON RPAR PLUS OR MINUS Larger EQUAL AND ]
## Transitions:
## Reductions:
-- On Smaller STAR SRPAR SLASH SEMICOLON RPAR PLUS OR MINUS Larger EQUAL AND
--   reduce production term -> term STAR factor

State 26:
## Known stack suffix:
## term SLASH
## LR(1) items:
term -> term SLASH . factor [ Smaller STAR SRPAR SLASH SEMICOLON RPAR PLUS OR MINUS Larger EQUAL AND ]
## Transitions:
-- On SLPAR shift to state 9
-- On Num shift to state 14
-- On LPAR shift to state 15
-- On IDENTIFIER shift to state 16
-- On factor shift to state 27
## Reductions:

State 27:
## Known stack suffix:
## term SLASH factor
## LR(1) items:
term -> term SLASH factor . [ Smaller STAR SRPAR SLASH SEMICOLON RPAR PLUS OR MINUS Larger EQUAL AND ]
## Transitions:
## Reductions:
-- On Smaller STAR SRPAR SLASH SEMICOLON RPAR PLUS OR MINUS Larger EQUAL AND
--   reduce production term -> term SLASH factor

State 28:
## Known stack suffix:
## factor
## LR(1) items:
term -> factor . [ Smaller STAR SRPAR SLASH SEMICOLON RPAR PLUS OR MINUS Larger EQUAL AND ]
## Transitions:
## Reductions:
-- On Smaller STAR SRPAR SLASH SEMICOLON RPAR PLUS OR MINUS Larger EQUAL AND
--   reduce production term -> factor

State 29:
## Known stack suffix:
## LPAR expr
## LR(1) items:
expr -> expr . PLUS term [ RPAR PLUS MINUS ]
expr -> expr . MINUS term [ RPAR PLUS MINUS ]
factor -> LPAR expr . RPAR [ Smaller STAR SRPAR SLASH SEMICOLON RPAR PLUS OR MINUS Larger EQUAL AND ]
## Transitions:
-- On RPAR shift to state 30
-- On PLUS shift to state 31
-- On MINUS shift to state 33
## Reductions:

State 30:
## Known stack suffix:
## LPAR expr RPAR
## LR(1) items:
factor -> LPAR expr RPAR . [ Smaller STAR SRPAR SLASH SEMICOLON RPAR PLUS OR MINUS Larger EQUAL AND ]
## Transitions:
## Reductions:
-- On Smaller STAR SRPAR SLASH SEMICOLON RPAR PLUS OR MINUS Larger EQUAL AND
--   reduce production factor -> LPAR expr RPAR

State 31:
## Known stack suffix:
## expr PLUS
## LR(1) items:
expr -> expr PLUS . term [ Smaller SRPAR SEMICOLON RPAR PLUS OR MINUS Larger EQUAL AND ]
## Transitions:
-- On SLPAR shift to state 9
-- On Num shift to state 14
-- On LPAR shift to state 15
-- On IDENTIFIER shift to state 16
-- On term shift to state 32
-- On factor shift to state 28
## Reductions:

State 32:
## Known stack suffix:
## expr PLUS term
## LR(1) items:
expr -> expr PLUS term . [ Smaller SRPAR SEMICOLON RPAR PLUS OR MINUS Larger EQUAL AND ]
term -> term . STAR factor [ Smaller STAR SRPAR SLASH SEMICOLON RPAR PLUS OR MINUS Larger EQUAL AND ]
term -> term . SLASH factor [ Smaller STAR SRPAR SLASH SEMICOLON RPAR PLUS OR MINUS Larger EQUAL AND ]
## Transitions:
-- On STAR shift to state 24
-- On SLASH shift to state 26
## Reductions:
-- On Smaller SRPAR SEMICOLON RPAR PLUS OR MINUS Larger EQUAL AND
--   reduce production expr -> expr PLUS term

State 33:
## Known stack suffix:
## expr MINUS
## LR(1) items:
expr -> expr MINUS . term [ Smaller SRPAR SEMICOLON RPAR PLUS OR MINUS Larger EQUAL AND ]
## Transitions:
-- On SLPAR shift to state 9
-- On Num shift to state 14
-- On LPAR shift to state 15
-- On IDENTIFIER shift to state 16
-- On term shift to state 34
-- On factor shift to state 28
## Reductions:

State 34:
## Known stack suffix:
## expr MINUS term
## LR(1) items:
expr -> expr MINUS term . [ Smaller SRPAR SEMICOLON RPAR PLUS OR MINUS Larger EQUAL AND ]
term -> term . STAR factor [ Smaller STAR SRPAR SLASH SEMICOLON RPAR PLUS OR MINUS Larger EQUAL AND ]
term -> term . SLASH factor [ Smaller STAR SRPAR SLASH SEMICOLON RPAR PLUS OR MINUS Larger EQUAL AND ]
## Transitions:
-- On STAR shift to state 24
-- On SLASH shift to state 26
## Reductions:
-- On Smaller SRPAR SEMICOLON RPAR PLUS OR MINUS Larger EQUAL AND
--   reduce production expr -> expr MINUS term

State 35:
## Known stack suffix:
## SLPAR IDENTIFIER IN IDENTIFIER ARROW expr
## LR(1) items:
expr -> expr . PLUS term [ SRPAR PLUS MINUS ]
expr -> expr . MINUS term [ SRPAR PLUS MINUS ]
factor -> SLPAR IDENTIFIER IN IDENTIFIER ARROW expr . SRPAR [ Smaller STAR SRPAR SLASH SEMICOLON RPAR PLUS OR MINUS Larger EQUAL AND ]
## Transitions:
-- On SRPAR shift to state 36
-- On PLUS shift to state 31
-- On MINUS shift to state 33
## Reductions:

State 36:
## Known stack suffix:
## SLPAR IDENTIFIER IN IDENTIFIER ARROW expr SRPAR
## LR(1) items:
factor -> SLPAR IDENTIFIER IN IDENTIFIER ARROW expr SRPAR . [ Smaller STAR SRPAR SLASH SEMICOLON RPAR PLUS OR MINUS Larger EQUAL AND ]
## Transitions:
## Reductions:
-- On Smaller STAR SRPAR SLASH SEMICOLON RPAR PLUS OR MINUS Larger EQUAL AND
--   reduce production factor -> SLPAR IDENTIFIER IN IDENTIFIER ARROW expr SRPAR

State 37:
## Known stack suffix:
## IDENTIFIER
## LR(1) items:
factor -> IDENTIFIER . [ Smaller STAR SLASH SEMICOLON PLUS MINUS Larger EQUAL ]
factor -> IDENTIFIER . LPAR varlist RPAR [ Smaller STAR SLASH SEMICOLON PLUS MINUS Larger EQUAL ]
factor -> IDENTIFIER . SLPAR varlist SRPAR [ Smaller STAR SLASH SEMICOLON PLUS MINUS Larger EQUAL ]
primed_eq -> IDENTIFIER . PRIME EQUAL expr [ SEMICOLON OR AND ]
primed_eq -> IDENTIFIER . LPAR varlist RPAR PRIME EQUAL expr [ SEMICOLON OR AND ]
primed_eq -> IDENTIFIER . SLPAR varlist SRPAR PRIME EQUAL expr [ SEMICOLON OR AND ]
proposition -> IDENTIFIER . [ SEMICOLON OR AND ]
proposition -> IDENTIFIER . LPAR varlist RPAR [ SEMICOLON OR AND ]
proposition -> IDENTIFIER . SLPAR varlist SRPAR [ SEMICOLON OR AND ]
## Transitions:
-- On SLPAR shift to state 38
-- On PRIME shift to state 44
-- On LPAR shift to state 47
## Reductions:
-- On Smaller STAR SLASH SEMICOLON PLUS MINUS Larger EQUAL
--   reduce production factor -> IDENTIFIER
-- On SEMICOLON OR AND
--   reduce production proposition -> IDENTIFIER
** Conflict on SEMICOLON

State 38:
## Known stack suffix:
## IDENTIFIER SLPAR
## LR(1) items:
factor -> IDENTIFIER SLPAR . varlist SRPAR [ Smaller STAR SLASH SEMICOLON PLUS MINUS Larger EQUAL ]
primed_eq -> IDENTIFIER SLPAR . varlist SRPAR PRIME EQUAL expr [ SEMICOLON OR AND ]
proposition -> IDENTIFIER SLPAR . varlist SRPAR [ SEMICOLON OR AND ]
## Transitions:
-- On IDENTIFIER shift to state 3
-- On varlist shift to state 39
## Reductions:
-- On SRPAR
--   reduce production varlist ->

State 39:
## Known stack suffix:
## IDENTIFIER SLPAR varlist
## LR(1) items:
factor -> IDENTIFIER SLPAR varlist . SRPAR [ Smaller STAR SLASH SEMICOLON PLUS MINUS Larger EQUAL ]
primed_eq -> IDENTIFIER SLPAR varlist . SRPAR PRIME EQUAL expr [ SEMICOLON OR AND ]
proposition -> IDENTIFIER SLPAR varlist . SRPAR [ SEMICOLON OR AND ]
## Transitions:
-- On SRPAR shift to state 40
## Reductions:

State 40:
## Known stack suffix:
## IDENTIFIER SLPAR varlist SRPAR
## LR(1) items:
factor -> IDENTIFIER SLPAR varlist SRPAR . [ Smaller STAR SLASH SEMICOLON PLUS MINUS Larger EQUAL ]
primed_eq -> IDENTIFIER SLPAR varlist SRPAR . PRIME EQUAL expr [ SEMICOLON OR AND ]
proposition -> IDENTIFIER SLPAR varlist SRPAR . [ SEMICOLON OR AND ]
## Transitions:
-- On PRIME shift to state 41
## Reductions:
-- On Smaller STAR SLASH SEMICOLON PLUS MINUS Larger EQUAL
--   reduce production factor -> IDENTIFIER SLPAR varlist SRPAR
-- On SEMICOLON OR AND
--   reduce production proposition -> IDENTIFIER SLPAR varlist SRPAR
** Conflict on SEMICOLON

State 41:
## Known stack suffix:
## IDENTIFIER SLPAR varlist SRPAR PRIME
## LR(1) items:
primed_eq -> IDENTIFIER SLPAR varlist SRPAR PRIME . EQUAL expr [ SEMICOLON OR AND ]
## Transitions:
-- On EQUAL shift to state 42
## Reductions:

State 42:
## Known stack suffix:
## IDENTIFIER SLPAR varlist SRPAR PRIME EQUAL
## LR(1) items:
primed_eq -> IDENTIFIER SLPAR varlist SRPAR PRIME EQUAL . expr [ SEMICOLON OR AND ]
## Transitions:
-- On SLPAR shift to state 9
-- On Num shift to state 14
-- On LPAR shift to state 15
-- On IDENTIFIER shift to state 16
-- On term shift to state 23
-- On factor shift to state 28
-- On expr shift to state 43
## Reductions:

State 43:
## Known stack suffix:
## IDENTIFIER SLPAR varlist SRPAR PRIME EQUAL expr
## LR(1) items:
expr -> expr . PLUS term [ SEMICOLON PLUS OR MINUS AND ]
expr -> expr . MINUS term [ SEMICOLON PLUS OR MINUS AND ]
primed_eq -> IDENTIFIER SLPAR varlist SRPAR PRIME EQUAL expr . [ SEMICOLON OR AND ]
## Transitions:
-- On PLUS shift to state 31
-- On MINUS shift to state 33
## Reductions:
-- On SEMICOLON OR AND
--   reduce production primed_eq -> IDENTIFIER SLPAR varlist SRPAR PRIME EQUAL expr

State 44:
## Known stack suffix:
## IDENTIFIER PRIME
## LR(1) items:
primed_eq -> IDENTIFIER PRIME . EQUAL expr [ SEMICOLON OR AND ]
## Transitions:
-- On EQUAL shift to state 45
## Reductions:

State 45:
## Known stack suffix:
## IDENTIFIER PRIME EQUAL
## LR(1) items:
primed_eq -> IDENTIFIER PRIME EQUAL . expr [ SEMICOLON OR AND ]
## Transitions:
-- On SLPAR shift to state 9
-- On Num shift to state 14
-- On LPAR shift to state 15
-- On IDENTIFIER shift to state 16
-- On term shift to state 23
-- On factor shift to state 28
-- On expr shift to state 46
## Reductions:

State 46:
## Known stack suffix:
## IDENTIFIER PRIME EQUAL expr
## LR(1) items:
expr -> expr . PLUS term [ SEMICOLON PLUS OR MINUS AND ]
expr -> expr . MINUS term [ SEMICOLON PLUS OR MINUS AND ]
primed_eq -> IDENTIFIER PRIME EQUAL expr . [ SEMICOLON OR AND ]
## Transitions:
-- On PLUS shift to state 31
-- On MINUS shift to state 33
## Reductions:
-- On SEMICOLON OR AND
--   reduce production primed_eq -> IDENTIFIER PRIME EQUAL expr

State 47:
## Known stack suffix:
## IDENTIFIER LPAR
## LR(1) items:
factor -> IDENTIFIER LPAR . varlist RPAR [ Smaller STAR SLASH SEMICOLON PLUS MINUS Larger EQUAL ]
primed_eq -> IDENTIFIER LPAR . varlist RPAR PRIME EQUAL expr [ SEMICOLON OR AND ]
proposition -> IDENTIFIER LPAR . varlist RPAR [ SEMICOLON OR AND ]
## Transitions:
-- On IDENTIFIER shift to state 3
-- On varlist shift to state 48
## Reductions:
-- On RPAR
--   reduce production varlist ->

State 48:
## Known stack suffix:
## IDENTIFIER LPAR varlist
## LR(1) items:
factor -> IDENTIFIER LPAR varlist . RPAR [ Smaller STAR SLASH SEMICOLON PLUS MINUS Larger EQUAL ]
primed_eq -> IDENTIFIER LPAR varlist . RPAR PRIME EQUAL expr [ SEMICOLON OR AND ]
proposition -> IDENTIFIER LPAR varlist . RPAR [ SEMICOLON OR AND ]
## Transitions:
-- On RPAR shift to state 49
## Reductions:

State 49:
## Known stack suffix:
## IDENTIFIER LPAR varlist RPAR
## LR(1) items:
factor -> IDENTIFIER LPAR varlist RPAR . [ Smaller STAR SLASH SEMICOLON PLUS MINUS Larger EQUAL ]
primed_eq -> IDENTIFIER LPAR varlist RPAR . PRIME EQUAL expr [ SEMICOLON OR AND ]
proposition -> IDENTIFIER LPAR varlist RPAR . [ SEMICOLON OR AND ]
## Transitions:
-- On PRIME shift to state 50
## Reductions:
-- On Smaller STAR SLASH SEMICOLON PLUS MINUS Larger EQUAL
--   reduce production factor -> IDENTIFIER LPAR varlist RPAR
-- On SEMICOLON OR AND
--   reduce production proposition -> IDENTIFIER LPAR varlist RPAR
** Conflict on SEMICOLON

State 50:
## Known stack suffix:
## IDENTIFIER LPAR varlist RPAR PRIME
## LR(1) items:
primed_eq -> IDENTIFIER LPAR varlist RPAR PRIME . EQUAL expr [ SEMICOLON OR AND ]
## Transitions:
-- On EQUAL shift to state 51
## Reductions:

State 51:
## Known stack suffix:
## IDENTIFIER LPAR varlist RPAR PRIME EQUAL
## LR(1) items:
primed_eq -> IDENTIFIER LPAR varlist RPAR PRIME EQUAL . expr [ SEMICOLON OR AND ]
## Transitions:
-- On SLPAR shift to state 9
-- On Num shift to state 14
-- On LPAR shift to state 15
-- On IDENTIFIER shift to state 16
-- On term shift to state 23
-- On factor shift to state 28
-- On expr shift to state 52
## Reductions:

State 52:
## Known stack suffix:
## IDENTIFIER LPAR varlist RPAR PRIME EQUAL expr
## LR(1) items:
expr -> expr . PLUS term [ SEMICOLON PLUS OR MINUS AND ]
expr -> expr . MINUS term [ SEMICOLON PLUS OR MINUS AND ]
primed_eq -> IDENTIFIER LPAR varlist RPAR PRIME EQUAL expr . [ SEMICOLON OR AND ]
## Transitions:
-- On PLUS shift to state 31
-- On MINUS shift to state 33
## Reductions:
-- On SEMICOLON OR AND
--   reduce production primed_eq -> IDENTIFIER LPAR varlist RPAR PRIME EQUAL expr

State 53:
## Known stack suffix:
## FORALL
## LR(1) items:
predicate -> FORALL . IDENTIFIER IN IDENTIFIER COLON predicate [ SEMICOLON OR AND ]
## Transitions:
-- On IDENTIFIER shift to state 54
## Reductions:

State 54:
## Known stack suffix:
## FORALL IDENTIFIER
## LR(1) items:
predicate -> FORALL IDENTIFIER . IN IDENTIFIER COLON predicate [ SEMICOLON OR AND ]
## Transitions:
-- On IN shift to state 55
## Reductions:

State 55:
## Known stack suffix:
## FORALL IDENTIFIER IN
## LR(1) items:
predicate -> FORALL IDENTIFIER IN . IDENTIFIER COLON predicate [ SEMICOLON OR AND ]
## Transitions:
-- On IDENTIFIER shift to state 56
## Reductions:

State 56:
## Known stack suffix:
## FORALL IDENTIFIER IN IDENTIFIER
## LR(1) items:
predicate -> FORALL IDENTIFIER IN IDENTIFIER . COLON predicate [ SEMICOLON OR AND ]
## Transitions:
-- On COLON shift to state 57
## Reductions:

State 57:
## Known stack suffix:
## FORALL IDENTIFIER IN IDENTIFIER COLON
## LR(1) items:
predicate -> FORALL IDENTIFIER IN IDENTIFIER COLON . predicate [ SEMICOLON OR AND ]
## Transitions:
-- On SLPAR shift to state 9
-- On Num shift to state 14
-- On LPAR shift to state 15
-- On IDENTIFIER shift to state 58
-- On FORALL shift to state 53
-- On EXISTS shift to state 65
-- On term shift to state 23
-- On proposition shift to state 70
-- On predicate shift to state 87
-- On factor shift to state 28
-- On expr shift to state 75
## Reductions:
